--- a/sandbox/project/popup.html
+++ b/sandbox/project/popup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Modal Box</title>
-    <link rel="stylesheet" href="sandbox\project\css\popup.css">
+    <link rel="stylesheet" href="C:\Users\lilistar\Desktop\Alessia - coding\CLG-2022\sandbox\project\css\popup.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
