--- a/sandbox/project/artikul1.html
+++ b/sandbox/project/artikul1.html
@@ -37,40 +37,50 @@
         <h2>Are you tired? Have tea!</h2>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque nobis provident, aliquid corporis
         voluptatem sit magni repellendus iusto placeat deleniti tempore architecto expedita sapiente at assumenda
-        blanditiis, modi, molestias fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Vitae, velit. Ullam
-        dolor totam, doloremque placeat quaerat reprehenderit quam facere odio perspiciatis eum! Beatae obcaecati
+        blanditiis, modi, molestias fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        <br> <br>
+        Vitae, velit. Ullam dolor totam, doloremque placeat quaerat reprehenderit quam facere odio perspiciatis eum!
+        Beatae obcaecati
         eveniet consequatur accusamus laudantium optio nobis provident itaque quam soluta, fuga unde maiores, error
         aliquam ipsum doloribus repellat officia eligendi atque blanditiis? Dignissimos ipsam unde nobis quia, molestias
         accusamus ullam consectetur. Numquam commodi similique ducimus error, asperiores enim architecto harum modi
-        ipsum et perspiciatis mollitia, in a nulla ea tempora tempore laudantium.  <br> Veniam quisquam, doloribus dolorum
-        ullam delectus fugit quidem dolore accusantium iure optio assumenda similique, atque libero quibusdam mollitia
+        ipsum et perspiciatis mollitia, in a nulla ea tempora tempore laudantium.
+        <br><br>
+        Veniam quisquam, doloribus dolorum ullam delectus fugit quidem dolore accusantium iure optio assumenda
+        similique, atque libero quibusdam mollitia
         minima asperiores impedit sequi animi ea culpa consequatur! Sapiente, minus pariatur, adipisci distinctio
         excepturi illum placeat sint repellat incidunt, aut deleniti reiciendis possimus? Illum, blanditiis similique
         mollitia maxime voluptas sint corporis. Laudantium, aliquid accusantium nesciunt suscipit aperiam doloribus
         eaque, e xplicabo perspiciatis exercitationem voluptatibus atque reiciendis a ipsa, omnis ipsum quibusdam
         consequuntur optio sint corrupti eum expedita? Voluptate, eaque cum laudantium iure odio ipsa? Sint quo odit
-        ab,
-        laborum nostrum vero ullam animi consequatur nihil itaque aspernatur deleniti magnam, perferendis eum nulla
+        ab, laborum nostrum vero ullam animi consequatur nihil itaque aspernatur deleniti magnam, perferendis eum nulla
         libero alias aliquam repellat consequuntur ex illum soluta pariatur ipsum? Amet molestiae, ratione harum
-        officia
-        similique sit qui, laudantium quis nulla nesciunt pariatur doloribus praesentium neque, tempora nisi eum.
-        Aliquid dolore nostrum libero accusantium ad? <br> Ipsa quas neque aperiam repudiandae asperiores. Porro expedita
-        itaque nemo qui quibusdam, praesentium ex tempora ut molestiae quis cumque eaque atque quasi magni, minus
+        officia similique sit qui, laudantium quis nulla nesciunt pariatur doloribus praesentium neque, tempora nisi
+        eum.
+        Aliquid dolore nostrum libero accusantium ad?
+        <br><br>
+        Ipsa quas neque aperiam repudiandae asperiores. Porro expedita itaque nemo qui quibusdam, praesentium ex tempora
+        ut molestiae quis cumque eaque atque quasi magni, minus
         corporis? Asperiores labore quae commodi voluptatibus, perspiciatis harum consequatur corporis, voluptas
         porro
         quod quisquam, reprehenderit eos consectetur. Ex expedita mollitia praesentium et molestiae cupiditate
         tempora
         facilis. Sint adipisci tempore laudantium corporis quo quas. itaque totam placeat nobis asperiores
         quibusdam
-        explicabo consequatur dignissimos eius animi,<img src="obrazky/tea.jpg" alt="" class="image"> deserunt, omnis consequuntur error. Neque distinctio ea, animi
+        explicabo consequatur dignissimos eius animi,<img src="obrazky/tea.jpg" alt="" class="image"> deserunt, omnis
+        consequuntur error. Neque distinctio ea, animi
         error consectetur reprehenderit tenetur suscipit laborum est quia repudiandae, laudantium quis ullam quisquam
-        non quibusdam quos autem voluptatum soluta quidem doloribus? <br> Ipsa veritatis voluptatibus quasi quisquam, ut,
-        ratione hic atque quos, aperiam laudantium similique modi harum odit architecto. Saepe ratione harum itaque quas
+        non quibusdam quos autem voluptatum soluta quidem doloribus?
+        <br><br>
+        Ipsa veritatis voluptatibus quasi quisquam, ut, ratione hic atque quos, aperiam laudantium similique modi harum
+        odit architecto. Saepe ratione harum itaque quas
         veniam sapiente temporibus laboriosam fuga. Eveniet debitis officia necessitatibus alias omnis blanditiis ullam!
         Aliquid voluptatibus exercitationem vitae. Nesciunt, eum, soluta maiores et sit dicta esse itaque possimus
         magnam natus facilis fugit, voluptatum magni debitis. Labore earum doloribus temporibus hic quaerat eligendi
-        debitis vel quasi eos, ipsam rerum explicabo nam, obcaecati sed. <br> Ad error inventore natus! Voluptatum sunt
-        culpa, cumque nihil inventore mollitia dolorum pariatur corrupti voluptates optio error necessitatibus
+        debitis vel quasi eos, ipsam rerum explicabo nam, obcaecati sed.
+        <br><br>
+        Ad error inventore natus! Voluptatum sunt culpa, cumque nihil inventore mollitia dolorum pariatur corrupti
+        voluptates optio error necessitatibus
         praesentium at perferendis, voluptatem deleniti. Fugit libero nihil obcaecati voluptas enim nostrum eveniet?
         Odio alias debitis iure enim natus distinctio amet sequi ab veritatis quam possimus aspernatur voluptatibus
         magni aut eveniet nemo rerum reiciendis repellat facere, perferendis voluptatem nesciunt animi vitae eius? Amet,
@@ -83,7 +93,7 @@
 
 
 
-        
+
     </section>
 
     <footer>
