--- a/sandbox/project/formular.html
+++ b/sandbox/project/formular.html
@@ -80,22 +80,27 @@
 
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="popup#2.css">
-  </head>
-    <h1>Popup/Modal Windows without JavaScript</h1>
-    <div class="box">
-        <a class="button" href="#popup1">Let me Pop up</a>
-    </div>
-    
-    <div id="popup1" class="overlay">
-        <div class="popup">
-            <h2>Here i am</h2>
-            <a class="close" href="#">&times;</a>
-            <div class="content">
-                Thank to pop me out of that button, but now i'm done so you can close this window.
+    <title>Modal Box</title>
+    <link rel="stylesheet" href="C:\Users\lilistar\Desktop\Alessia - coding\CLG-2022\sandbox\project\css\popup.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+</head>
+
+<body>
+    <div class="center">
+        <input type="checkbox" id="click">
+        <label for="click" class="click-me">Click Me</label>
+        <div class="content">
+            <div class="header">
+                <h2>Modal Popup</h2>
+                <label for="click" class="fas fa-times"></label>
             </div>
+            <label for="click" class="fas fa-check"></label>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <div class="line"></div>
+            <label for="click" class="close-btn">Close</label>
         </div>
     </div>
+</body>
 
 
   <!--Pop - up "thank you"-->
