--- a/sandbox/project/artikul1.html
+++ b/sandbox/project/artikul1.html
@@ -67,13 +67,13 @@
         tempora
         facilis. Sint adipisci tempore laudantium corporis quo quas. itaque totam placeat nobis asperiores
         quibusdam
-        explicabo consequatur dignissimos eius animi,<img src="obrazky/tea.jpg" alt="" class="image"> deserunt, omnis
+        explicabo consequatur dignissimos eius animi, deserunt, omnis
         consequuntur error. Neque distinctio ea, animi
         error consectetur reprehenderit tenetur suscipit laborum est quia repudiandae, laudantium quis ullam quisquam
         non quibusdam quos autem voluptatum soluta quidem doloribus?
         <br><br>
         Ipsa veritatis voluptatibus quasi quisquam, ut, ratione hic atque quos, aperiam laudantium similique modi harum
-        odit architecto. Saepe ratione harum itaque quas
+        odit architecto. Saepe ratione harum itaque quas<img src="obrazky/tea.jpg" alt="" class="image">
         veniam sapiente temporibus laboriosam fuga. Eveniet debitis officia necessitatibus alias omnis blanditiis ullam!
         Aliquid voluptatibus exercitationem vitae. Nesciunt, eum, soluta maiores et sit dicta esse itaque possimus
         magnam natus facilis fugit, voluptatum magni debitis. Labore earum doloribus temporibus hic quaerat eligendi
