--- a/sandbox/project/formular.html
+++ b/sandbox/project/formular.html
@@ -69,11 +69,19 @@
 
     </form>
 
-
     <form>
-      <button id="button" type="submit" formaction="thankyou.html">Submit</button>
-    </form>
-    </button>
+      <label for="often"></label>Select how often do you want to receive our newsletter.</label>
+      <select name="often" id="often">
+        <option value="daily">Daily</option>
+        <option value="weekly">Weekly</option>
+        <option value="Monthly">Monthly</option>
+      </select>
+      <br><br>
+
+      <form>
+        <button id="button" type="submit" formaction="thankyou.html">Submit</button>
+      </form>
+      </button>
   </section>
 
 
