--- a/sandbox/project/error404.html
+++ b/sandbox/project/error404.html
@@ -1,2 +1,57 @@
-Error 404
-Page not found, probebly because we did not have the time to code it.
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Title.com - Your Daily News on the Go</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/dropdown-menu.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+</head>
+
+<body>
+    <div class="page-header">
+        <div class="border-top"></div>
+        <h1 class="title"><a style="color:black" href="main-page.html">title.com ||</a></h1>
+        <div class="subheading">
+            <div>your daily news on the go</div>
+            <div class="spacer"></div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn"><span class="material-symbols-outlined">
+                    menu
+                </span>
+            </button>
+            <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                <a href="#">Link 4</a>
+                <a href="formular.html">Subscribe to our newsletter</a>
+            </div>
+        </div>
+    </div>
+
+    <section>
+        <br><br><br><br><br><br>
+        <justify-content:center>
+            <align-items:center>
+                <h2> Error 404</h2>
+            </align-items:center>
+            <h2>Page not found, probably because we did not have the time to code it.</h2>
+            <h2 style="text-align:center"></h2 ">Error 404
+    </section>
+    <footer>
+        <div class="copyright">
+            <p>&copy 2022 - title.com</p>
+        </div>
+        <div class="social">
+            <a href="formular.html" class="support">Newsletter</a>
+            <a target="_blank" href="https://www.facebook.com/nytimes/" class="face">f</a>
+            <a target="_blank" href="https://twitter.com/nytimes" class="tweet">t</a>
+            <a target="_blank" href="https://www.linkedin.com/company/the-new-york-times" class="linked">in</a>
+        </div>
+    </footer>
+
+</html>
