--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -49,12 +49,13 @@
             <h3>Article 2</h3>
             <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales
                 quam. Duis suscipit a nibh quis
-                elementum. Aliquam lobortis dignissim... ||</p>
+                elementum. Aliquam lobortis dignissim... || <a href="artikul2.html">continue reading ></a></p>
             <br>
             <h3>Article 3</h3>
-            <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales
+            <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
+                sodales
                 quam. Duis suscipit a nibh quis
-                elementum. Aliquam lobortis dignissim... ||</p>
+                elementum. Aliquam lobortis dignissim... || <a href="artikul3.html">continue reading ></a></p>
         </div>
 
 
