--- a/sandbox/project/error404.html
+++ b/sandbox/project/error404.html
@@ -35,12 +35,9 @@
 
     <section>
         <br><br><br><br><br><br>
-        <justify-content:center>
-            <align-items:center>
-                <h2> Error 404</h2>
-            </align-items:center>
-            <h2>Page not found, probably because we did not have the time to code it.</h2>
-            <h2 style="text-align:center"></h2 ">Error 404
+
+        <h2 style="text-align:center">Error 404</h2>
+        <h2 style="text-align:center">Page not found, probably because we did not have the time to code it.</h2>
     </section>
     <footer>
         <div class="copyright">
