--- a/sandbox/project/dropdown#3.html
+++ b/sandbox/project/dropdown#3.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<div class="dropdown" tabindex="1">
-    <i class="db2" tabindex="1"></i>
-    <a class="dropbtn">Dropdown 1</a>
-    <div class="dropdown-content">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+<div class="dropdown">
+    <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+    <div id="myDropdown" class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
     </div>
 </div>
+
+<script>
+    document.getElementById("demo").innerHTML = "myscript.js";
+</script>
 
 </html>
