--- a/sandbox/project/dropdown#3.html
+++ b/sandbox/project/dropdown#3.html
@@ -11,7 +11,7 @@
 </div>
 
 <script>
-    document.getElementById("demo").innerHTML = "myscript.js";
+    <script src="myscript.js"></script>
 </script>
 
 </html>
