--- a/sandbox/project/formular.html
+++ b/sandbox/project/formular.html
@@ -53,22 +53,45 @@
     <p>Choose your interests</p>
 
     <form>
-      <input type="checkbox" id="html" name="intrests" value="HTML">
-      <label for="html">News</label><br>
-      <input type="checkbox" id="css" name="intrests" value="CSS">
-      <label for="css">Technology</label><br>
-      <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
-      <label for="javascript">Sport</label><br>
-      <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
-      <label for="javascript">Fashion</label><br>
-      <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
-      <label for="javascript">Art</label><br>
-      <input type="checkbox" id="javascript" name="intrests" value="JavaScript">
-      <label for="javascript">Science</label><br>
-
+      <table>
+        <tr>
+          <td>
+            <div class="table-spacing"><input type="checkbox" id="html" name="intrests" value="HTML">
+              <label for="html">News</label>
+            </div>
+          </td>
+          <td>
+            <div class="table-spacing"><input type="checkbox" id="css" name="intrests" value="CSS">
+              <label for="css">Technology</label>
+            </div>
+          </td>
+          <td>
+            <div class="table-spacing"><input type="checkbox" id="javascript" name="intrests" value="JavaScript">
+              <label for="javascript">Sport</label>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="table-spacing"><input type="checkbox" id="javascript" name="intrests" value="JavaScript">
+              <label for="javascript">Fashion</label>
+            </div>
+          </td>
+          <td>
+            <div class="table-spacing"><input type="checkbox" id="javascript" name="intrests" value="JavaScript">
+              <label for="javascript">Art</label>
+            </div>
+          </td>
+          <td>
+            <div class="table-spacing"><input type="checkbox" id="javascript" name="intrests" value="JavaScript">
+              <label for="javascript">Science</label>
+            </div>
+          </td>
+        </tr>
+      </table>
 
     </form>
-
+    <br>
     <form>
       <label for="often"></label>Select how often do you want to receive our newsletter.</label>
       <select name="often" id="often">
@@ -85,7 +108,7 @@
   </section>
 
 
-  <footer>
+  <footer class="footer-s">
     <div class="copyright">
       <p>&copy 2022 - Title.com</p>
     </div>
