--- a/sandbox/project/news.html
+++ b/sandbox/project/news.html
@@ -34,7 +34,7 @@
     </div>
 
     <section>
-        <h2>Scientists invented the elixir of immortality</h2>
+        <h2>Fire in Czech Switzerland</h2>
         <hr>
         <hr>
         <div class="article">
@@ -99,7 +99,7 @@
             debitis officia necessitatibus alias omnis blanditiis
             ullam!
             Aliquid voluptatibus exercitationem vitae. Nesciunt, eum, soluta maiores et sit dicta esse itaque
-            possimus<img src="obrazky/science.jpg" alt="" class="image">
+            possimus<img src="obrazky/fire.jpg" alt="" class="image">
             magnam natus facilis fugit, voluptatum magni debitis. Labore earum doloribus temporibus hic quaerat
             eligendi
             debitis vel quasi eos, ipsam rerum explicabo nam, obcaecati sed.
@@ -123,7 +123,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat laudantium illum suscipit tenetur vitae
             delectus labore placeat eaque beatae inventore, unde error molestias consequatur sapiente, sint ipsam
             corrupti.
-            Fuga, quos?
+            
         </div>
     </section>
 
