--- a/sandbox/project/technology.html
+++ b/sandbox/project/technology.html
@@ -3,25 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>title.com</title>
+    <title>Title.com - Your Daily News on the Go</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/dropdown-menu.css">
-    <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
-
 <body>
     <div class="page-header">
         <div class="border-top"></div>
-        <h1 class="title">title.com ||</h1>
+        <h1 class="title"><a style="color:black" href="main-page.html">title.com ||</a></h1>
         <div class="subheading">
             <div>your daily news on the go</div>
             <div class="spacer"></div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
+            <button class="dropbtn"><span class="material-symbols-outlined">
+                    menu
+                </span>
+            </button>
             <div class="dropdown-content">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
@@ -33,26 +34,108 @@
     </div>
 
     <section>
-        <h2>Graphics cards are not available</h2>
-        <img src="obrazky/gk2.jfif" alt="" width="auto" height="200">
-        <p>Graphics cards are not available, or are overpriced see. RTX 3080. They are bought out by
-            cryptocurrency miners.
+        <h2>We tried the new Surface 8 pro</h2>
+        <hr>
+        <hr>
+        <div class="article">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque nobis provident, aliquid corporis
+            voluptatem sit magni repellendus iusto placeat deleniti tempore architecto expedita sapiente at
+            assumenda
+            blanditiis, modi, molestias fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <br> <br>
+            Vitae, velit. Ullam dolor totam, doloremque placeat quaerat reprehenderit quam facere odio perspiciatis
+            eum!
+            Beatae obcaecati
+            eveniet consequatur accusamus laudantium optio nobis provident itaque quam soluta, fuga unde maiores,
+            error
+            aliquam ipsum doloribus repellat officia eligendi atque blanditiis? Dignissimos ipsam unde nobis quia,
+            molestias
+            accusamus ullam consectetur. Numquam commodi similique ducimus error, asperiores enim architecto harum
+            modi
+            ipsum et perspiciatis mollitia, in a nulla ea tempora tempore laudantium.
+            <br><br>
+            Veniam quisquam, doloribus dolorum ullam delectus fugit quidem dolore accusantium iure optio assumenda
+            similique, atque libero quibusdam mollitia
+            minima asperiores impedit sequi animi ea culpa consequatur! Sapiente, minus pariatur, adipisci
+            distinctio
+            excepturi illum placeat sint repellat incidunt, aut deleniti reiciendis possimus? Illum, blanditiis
+            similique
+            mollitia maxime voluptas sint corporis. Laudantium, aliquid accusantium nesciunt suscipit aperiam
+            doloribus
+            eaque, e xplicabo perspiciatis exercitationem voluptatibus atque reiciendis a ipsa, omnis ipsum
+            quibusdam
+            consequuntur optio sint corrupti eum expedita? Voluptate, eaque cum laudantium iure odio ipsa? Sint quo
+            odit
+            ab, laborum nostrum vero ullam animi consequatur nihil itaque aspernatur deleniti magnam, perferendis
+            eum
+            nulla
+            libero alias aliquam repellat consequuntur ex illum soluta pariatur ipsum? Amet molestiae, ratione harum
+            officia similique sit qui, laudantium quis nulla nesciunt pariatur doloribus praesentium neque, tempora
+            nisi
+            eum.
+            Aliquid dolore nostrum libero accusantium ad?
+            <br><br>
+            Ipsa quas neque aperiam repudiandae asperiores. Porro expedita itaque nemo qui quibusdam, praesentium ex
+            tempora
+            ut molestiae quis cumque eaque atque quasi magni, minus
+            corporis? Asperiores labore quae commodi voluptatibus, perspiciatis harum consequatur corporis, voluptas
+            porro
+            quod quisquam, reprehenderit eos consectetur. Ex expedita mollitia praesentium et molestiae cupiditate
+            tempora
+            facilis. Sint adipisci tempore laudantium corporis quo quas. itaque totam placeat nobis asperiores
+            quibusdam
+            explicabo consequatur dignissimos eius animi, deserunt,
+            omnis
+            consequuntur error. Neque distinctio ea, animi
+            error consectetur reprehenderit tenetur suscipit laborum est quia repudiandae, laudantium quis ullam
+            quisquam
+            non quibusdam quos autem voluptatum soluta quidem doloribus?
+            <br><br>
+            Ipsa veritatis voluptatibus quasi quisquam, ut, ratione hic atque quos, aperiam laudantium similique
+            modi
+            harum
+            odit architecto. Saepe ratione harum itaque quas
+            veniam sapiente temporibus laboriosam fuga. Eveniet
+            debitis officia necessitatibus alias omnis blanditiis
+            ullam!
+            Aliquid voluptatibus exercitationem vitae. Nesciunt, eum, soluta maiores et sit dicta esse itaque
+            possimus<img src="obrazky/surface.jpg" alt="" class="image">
+            magnam natus facilis fugit, voluptatum magni debitis. Labore earum doloribus temporibus hic quaerat
+            eligendi
+            debitis vel quasi eos, ipsam rerum explicabo nam, obcaecati sed.
+            <br><br>
+            Ad error inventore natus! Voluptatum sunt culpa, cumque nihil inventore mollitia dolorum pariatur
+            corrupti
+            voluptates optio error necessitatibus
+            praesentium at perferendis, voluptatem deleniti. Fugit libero nihil obcaecati voluptas enim nostrum
+            eveniet?
+            Odio alias debitis iure enim natus distinctio amet sequi ab veritatis quam possimus aspernatur
+            voluptatibus
+            magni aut eveniet nemo rerum reiciendis repellat facere, perferendis voluptatem nesciunt animi vitae
+            eius?
+            Amet,
+            magnam officia id, repellendus temporibus ex molestias, sed sunt necessitatibus quam doloremque fugit.
+            Atque
+            magni accusamus expedita dolores tenetur ratione, sunt velit debitis ipsum veniam natus nobis ad sit
+            consectetur
+            fugiat ea ullam laborum odio nostrum illum beatae facilis? Ipsum quasi asperiores sequi placeat rerum
+            obcaecati
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat laudantium illum suscipit tenetur vitae
+            delectus labore placeat eaque beatae inventore, unde error molestias consequatur sapiente, sint ipsam
+            corrupti.
+            Fuga, quos?
+        </div>
+    </section>
 
 
-        <h2>new surface 8 pro</h2>
-        <img src="obrazky/surface.jpg" alt="">
-        <p>The new Surface 8 PRO is a Windows tablet that can also function as a laptop, just connect a keyboard to it
-            using magnetic pins. You can also buy a mouse. The Surface 8 PRO is a good hybrid between a tablet and a
-            laptop for school, for example, because it is very light (weighs only 700g) and thin.</p>
-        <form>
-            <button id="button" type="home" formaction="main-page.html">Home</button>
-        </form>
-        </button>
+
+
+
     </section>
 
     <footer>
         <div class="copyright">
-            <p>&copy 2022 - Title.com</p>
+            <p>&copy 2022 - title.com</p>
         </div>
         <div class="social">
             <a href="formular.html" class="support">Newsletter</a>
@@ -61,3 +144,6 @@
             <a target="_blank" href="https://www.linkedin.com/company/the-new-york-times" class="linked">in</a>
         </div>
     </footer>
+</body>
+
+</html>
