--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -37,25 +37,33 @@
 
     <section>
 
-        <div>
-            <h2>THANK YOU FOR SIGNING UP TO OUR NEWSLETTER!</h2>
-        </div>
+        <div class="height">
+            <section>
+                <div class="thx-height">
+                    <div>
+                        <h1 style="text-align:center">THANK YOU FOR SIGNING UP TO OUR NEWSLETTER</h1>
+                    </div>
 
-        <form>
-            <button id="button" type="home" formaction="main-page.html">Home</button>
-        </form>
-        </button>
-    </section>
 
-    <footer class="footer-s">
-        <div class="copyright">
-            <p>&copy 2022 - Title.com</p>
+                    <div>
+                        <h2>THANK YOU FOR SIGNING UP TO OUR NEWSLETTER!</h2>
+                    </div>
+
+                    <form>
+                        <button id="button" type="home" formaction="main-page.html">Home</button>
+                    </form>
+                    </button>
+            </section>
+
+            <footer class="footer-s">
+                <div class="copyright">
+                    <p>&copy 2022 - Title.com</p>
+                </div>
+                <div class="social">
+                    <a href="formular.html" class="support">Newsletter</a>
+                    <a target="_blank" href="https://www.facebook.com/nytimes/" class="face">f</a>
+                    <a target="_blank" href="https://twitter.com/nytimes" class="tweet">t</a>
+                    <a target="_blank" href="https://www.linkedin.com/company/the-new-york-times" class="linked">in</a>
+                </div>
+            </footer>
         </div>
-        <div class="social">
-            <a href="formular.html" class="support">Newsletter</a>
-            <a target="_blank" href="https://www.facebook.com/nytimes/" class="face">f</a>
-            <a target="_blank" href="https://twitter.com/nytimes" class="tweet">t</a>
-            <a target="_blank" href="https://www.linkedin.com/company/the-new-york-times" class="linked">in</a>
-        </div>
-    </footer>
-    </div>
