--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -36,34 +36,23 @@
     </div>
 
     <section>
+        <br><br><br><br><br><br>
 
-        <div class="height">
-            <section>
-                <div class="thx-height">
-                    <div>
-                        <h1 style="text-align:center">THANK YOU FOR SIGNING UP TO OUR NEWSLETTER</h1>
-                    </div>
+        <h2 style="text-align:center">Thank you for signing up to our newsletter</h2>
 
 
-                    <div>
-                        <h2>THANK YOU FOR SIGNING UP TO OUR NEWSLETTER!</h2>
-                    </div>
 
-                    <form>
-                        <button id="button" type="home" formaction="main-page.html">Home</button>
-                    </form>
-                    </button>
-            </section>
+    </section>
 
-            <footer class="footer-s">
-                <div class="copyright">
-                    <p>&copy 2022 - Title.com</p>
-                </div>
-                <div class="social">
-                    <a href="formular.html" class="support">Newsletter</a>
-                    <a target="_blank" href="https://www.facebook.com/nytimes/" class="face">f</a>
-                    <a target="_blank" href="https://twitter.com/nytimes" class="tweet">t</a>
-                    <a target="_blank" href="https://www.linkedin.com/company/the-new-york-times" class="linked">in</a>
-                </div>
-            </footer>
+    <footer class="footer-s">
+        <div class="copyright">
+            <p>&copy 2022 - title.com</p>
         </div>
+        <div class="social">
+            <a href="formular.html" class="support">Newsletter</a>
+            <a target="_blank" href="https://www.facebook.com/nytimes/" class="face">f</a>
+            <a target="_blank" href="https://twitter.com/nytimes" class="tweet">t</a>
+            <a target="_blank" href="https://www.linkedin.com/company/the-new-york-times" class="linked">in</a>
+        </div>
+    </footer>
+    </div>
