--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -35,10 +35,14 @@
         </div>
     </div>
 
-    <section>
+    <section style="text-align:center">
         <br><br><br><br><br><br>
 
-        <h2 style="text-align:center">Thank you for signing up to our newsletter</h2>
+        <h2>Thank you for signing up to our newsletter</h2>
+        <form>
+            <button id="button" type="home" formaction="main-page.html">HOME</button>
+        </form>
+        </button>
 
 
 
