--- a/sandbox/project/section-hub.html
+++ b/sandbox/project/section-hub.html
@@ -59,7 +59,7 @@
             <hr>
             <br>
 
-            <div>
+            <div class="featured-section-featured">
                 <h3>Featured article</h3>
                 <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales
                     quam. Duis suscipit a nibh quis elementum. Aliquam lobortis dignissim interdum. Nam condimentum
@@ -70,10 +70,13 @@
                     <br><br>
 
                     Cras id luctus justo. Sed sed dolor non ipsum venenatis fringilla. Proin non sodales erat. Nullam at
-                    cursus nisi. Sed vel rhoncus libero. Ut rutrum libero et cursus imperdiet. Duis placerat<a
-                        href="error404.html">continue reading ></a>
+                    cursus nisi. Sed vel rhoncus libero. Ut rutrum libero et cursus imperdiet. Duis placerat... ||<a
+                        href="error404.html"> continue reading ></a>
                 </p>
             </div>
+
+            <hr>
+            <hr>
 
             <div class="grid-container">
                 <div class="grid-item">
