--- a/sandbox/project/artikul1.html
+++ b/sandbox/project/artikul1.html
@@ -34,77 +34,54 @@
     </div>
 
     <section>
-        <h2>Are you tired? Have tea!</h2>
+        <h2>Panama Canal - Waterway between the Atlantic and the Pacific</h2>
         <hr>
         <hr>
         <div class="article">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque nobis provident, aliquid corporis
-            voluptatem sit magni repellendus iusto placeat deleniti tempore architecto expedita sapiente at assumenda
-            blanditiis, modi, molestias fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            <br> <br>
-            Vitae, velit. Ullam dolor totam, doloremque placeat quaerat reprehenderit quam facere odio perspiciatis eum!
-            Beatae obcaecati
-            eveniet consequatur accusamus laudantium optio nobis provident itaque quam soluta, fuga unde maiores, error
-            aliquam ipsum doloribus repellat officia eligendi atque blanditiis? Dignissimos ipsam unde nobis quia,
-            molestias
-            accusamus ullam consectetur. Numquam commodi similique ducimus error, asperiores enim architecto harum modi
-            ipsum et perspiciatis mollitia, in a nulla ea tempora tempore laudantium.
+            <br>The Panama Canal is a waterway that connects the Atlantic and the Pacific Ocean. Before the canal was
+            opened
+            in 1914 ships had to travel around the southern tip of South America to get from the Atlantic to the Pacific
+            Ocean. The Panama Canal shortens the journey by about 11000 km.
+            <br>
+            <br>
+            The Panama Canal is 82 km long. Ships travel through the waterway through a system of locks. Panama is a
+            hilly country and it was not possible to build a sea-level canal. Instead ships must pass through chambers
+            that are filled with water. They raise and lower ships from one level of the canal to another. Each of the
+            locks is about 300 meters long. Ships cannot travel through the locks by themselves. They are connected to
+            cables and pulled by trains that move alongside the canal. There is always a pair of locks so that ships can
+            travel in both directions. When a ship enters the canal a special canal pilot comes on board and guides the
+            ship through the canal safely. It takes a ship about 8 to 10 hours to travel through the Panama Canal.
+            <br>
+            <br>
+            <h3>History of the Panama Canal</h3>
+            <br>
+            People have dreamed of connecting the two oceans for a long time. In the 1880s Ferdinand de Lesseps, a
+            French engineer who had built the Suez Canal a few years before, attempted to build a canal through Panama
+            by digging straight through the hills but the project failed.
+
+            In 1903 Panama became an independent country and allowed the United States to build a canal on its
+            territory. The two countries signed a treaty which not only gave the Americans the right to control the
+            canal but also gave them land on which the canal was built. The Americans decided to build a canal that
+            depended on locks because they thought it would be cheaper and easier to build. It took about 10 years to
+            build the Panama Canal and up to 40,000 men worked on the project.
             <br><br>
-            Veniam quisquam, doloribus dolorum ullam delectus fugit quidem dolore accusantium iure optio assumenda
-            similique, atque libero quibusdam mollitia
-            minima asperiores impedit sequi animi ea culpa consequatur! Sapiente, minus pariatur, adipisci distinctio
-            excepturi illum placeat sint repellat incidunt, aut deleniti reiciendis possimus? Illum, blanditiis
-            similique
-            mollitia maxime voluptas sint corporis. Laudantium, aliquid accusantium nesciunt suscipit aperiam doloribus
-            eaque, e xplicabo perspiciatis exercitationem voluptatibus atque reiciendis a ipsa, omnis ipsum quibusdam
-            consequuntur optio sint corrupti eum expedita? Voluptate, eaque cum laudantium iure odio ipsa? Sint quo odit
-            ab, laborum nostrum vero ullam animi consequatur nihil itaque aspernatur deleniti magnam, perferendis eum
-            nulla
-            libero alias aliquam repellat consequuntur ex illum soluta pariatur ipsum? Amet molestiae, ratione harum
-            officia similique sit qui, laudantium quis nulla nesciunt pariatur doloribus praesentium neque, tempora nisi
-            eum.
-            Aliquid dolore nostrum libero accusantium ad?
+            Even though diseases like yellow fever and malaria could already be cured at that time, thousand s of
+            workers died in the jungle of Panama. In 1914 construction ended and the canal was officially opened.
+
+            The Canal Zone became a kind of American colony and led to many problems between America and Panama in the
+            20th century. Many citizens of Panama did not want the Americans in their country. In 1977 the United States
+            and Panama signed a new agreement and on December 31, 1999 the USA handed the Canal Zone over to the
+            Panamanian government. Today, Panama operates the canal but the United States still has the right to defend
+            it in times of war.
+
+            The Panama Canal is very important for the world’s economy. About 12,000 ships and 200 million tons of goods
+            pass through the canal every year. However, the canal has become too small and big freighters and
+            supertankers cannot travel through it. Panama and the United States are planning to make the canal bigger so
+            that larger ships can pass through.
             <br><br>
-            Ipsa quas neque aperiam repudiandae asperiores. Porro expedita itaque nemo qui quibusdam, praesentium ex
-            tempora
-            ut molestiae quis cumque eaque atque quasi magni, minus
-            corporis? Asperiores labore quae commodi voluptatibus, perspiciatis harum consequatur corporis, voluptas
-            porro
-            quod quisquam, reprehenderit eos consectetur. Ex expedita mollitia praesentium et molestiae cupiditate
-            tempora
-            facilis. Sint adipisci tempore laudantium corporis quo quas. itaque totam placeat nobis asperiores
-            quibusdam
-            explicabo consequatur dignissimos eius animi,<img src="obrazky/tea.jpg" alt="" class="image"> deserunt,
-            omnis
-            consequuntur error. Neque distinctio ea, animi
-            error consectetur reprehenderit tenetur suscipit laborum est quia repudiandae, laudantium quis ullam
-            quisquam
-            non quibusdam quos autem voluptatum soluta quidem doloribus?
+
             <br><br>
-            Ipsa veritatis voluptatibus quasi quisquam, ut, ratione hic atque quos, aperiam laudantium similique modi
-            harum
-            odit architecto. Saepe ratione harum itaque quas
-            veniam sapiente temporibus laboriosam fuga. Eveniet debitis officia necessitatibus alias omnis blanditiis
-            ullam!
-            Aliquid voluptatibus exercitationem vitae. Nesciunt, eum, soluta maiores et sit dicta esse itaque possimus
-            magnam natus facilis fugit, voluptatum magni debitis. Labore earum doloribus temporibus hic quaerat eligendi
-            debitis vel quasi eos, ipsam rerum explicabo nam, obcaecati sed.
-            <br><br>
-            Ad error inventore natus! Voluptatum sunt culpa, cumque nihil inventore mollitia dolorum pariatur corrupti
-            voluptates optio error necessitatibus
-            praesentium at perferendis, voluptatem deleniti. Fugit libero nihil obcaecati voluptas enim nostrum eveniet?
-            Odio alias debitis iure enim natus distinctio amet sequi ab veritatis quam possimus aspernatur voluptatibus
-            magni aut eveniet nemo rerum reiciendis repellat facere, perferendis voluptatem nesciunt animi vitae eius?
-            Amet,
-            magnam officia id, repellendus temporibus ex molestias, sed sunt necessitatibus quam doloremque fugit. Atque
-            magni accusamus expedita dolores tenetur ratione, sunt velit debitis ipsum veniam natus nobis ad sit
-            consectetur
-            fugiat ea ullam laborum odio nostrum illum beatae facilis? Ipsum quasi asperiores sequi placeat rerum
-            obcaecati
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat laudantium illum suscipit tenetur vitae
-            delectus labore placeat eaque beatae inventore, unde error molestias consequatur sapiente, sint ipsam
-            corrupti.
-            Fuga, quos?
+
         </div>
     </section>
 
