--- a/sandbox/project/artikul3.html
+++ b/sandbox/project/artikul3.html
@@ -38,7 +38,7 @@
         <hr>
         <hr>
         <div class="article">
-            Sometimes, the pace of modern life barely gives you time to stop and rest. It can make getting a good
+            <br>Sometimes, the pace of modern life barely gives you time to stop and rest. It can make getting a good
             night’s sleep on a regular basis seem like a dream.
 
             But sleep is as important for good health as diet and exercise. Good sleep improves your brain performance,
