--- a/sandbox/project/artikul1.html
+++ b/sandbox/project/artikul1.html
@@ -57,8 +57,9 @@
             <br>
             People have dreamed of connecting the two oceans for a long time. In the 1880s Ferdinand de Lesseps, a
             French engineer who had built the Suez Canal a few years before, attempted to build a canal through Panama
-            by digging straight through the hills but the project failed.
-
+            by digging straight through the hills but the project failed.<br>
+            <img src="obrazky/panama.jpg" alt="" align="left" class="image-c"><img src="obrazky/panamacanal.jpg" alt=""
+                class="image-c" align="right"><img src="obrazky/panama2.jpg" alt="" class="image-c"><br><br>
             In 1903 Panama became an independent country and allowed the United States to build a canal on its
             territory. The two countries signed a treaty which not only gave the Americans the right to control the
             canal but also gave them land on which the canal was built. The Americans decided to build a canal that
@@ -86,7 +87,7 @@
     </section>
 
     <footer>
-        <div class="copyright">
+        <div class=" copyright">
             <p>&copy 2022 - title.com</p>
         </div>
         <div class="social">
