--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -24,10 +24,14 @@
                 </span>
             </button>
             <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
-                <a href="#">Link 4</a>
+                <a href="section-hub.html">News</a>
+                <a href="section-hub.html">Technology</a>
+                <a href="section-hub.html">Sport</a>
+                <a href="section-hub.html">Science</a>
+                <a href="section-hub.html">Fashion</a>
+                <a href="section-hub.html">Art</a>
+                <a href="section-hub.html">Lifestyle</a>
+                <a href="section-hub.html">Politics</a>
                 <a href="formular.html">Subscribe to our newsletter</a>
             </div>
         </div>
@@ -117,15 +121,15 @@
             <body>
 
                 <div class="grid-container">
-                    <div class="grid-item">news</div>
-                    <div class="grid-item">technology</div>
-                    <div class="grid-item">sport</div>
-                    <div class="grid-item">fashion</div>
-                    <div class="grid-item">art</div>
-                    <div class="grid-item">science</div>
-                    <div class="grid-item">lifestyle</div>
-                    <div class="grid-item">politics</div>
-                    <div class="grid-item">9</div>
+                    <div class="grid-item"><a href="section-hub.html">news</a></div>
+                    <div class="grid-item"><a href="section-hub.html">technology</a></div>
+                    <div class="grid-item"><a href="section-hub.html">sport</a></div>
+                    <div class="grid-item"><a href="section-hub.html">fashion</a></div>
+                    <div class="grid-item"><a href="section-hub.html">art</a></div>
+                    <div class="grid-item"><a href="section-hub.html">science</a></div>
+                    <div class="grid-item"><a href="section-hub.html">lifestyle</a></div>
+                    <div class="grid-item"><a href="section-hub.html">politics</a></div>
+                    <div class="grid-item"><a href="section-hub.html">s</a></div>
                 </div>
                 <br>
         </div>
