--- a/sandbox/project/artikul1.html
+++ b/sandbox/project/artikul1.html
@@ -38,7 +38,7 @@
         <hr>
         <hr>
         <div class="article">
-            <br>The Panama Canal is a waterway that connects the Atlantic and the Pacific Ocean. Before the canal was
+            The Panama Canal is a waterway that connects the Atlantic and the Pacific Ocean. Before the canal was
             opened
             in 1914 ships had to travel around the southern tip of South America to get from the Atlantic to the Pacific
             Ocean. The Panama Canal shortens the journey by about 11000 km.
