--- a/sandbox/project/artikul2.html
+++ b/sandbox/project/artikul2.html
@@ -38,7 +38,7 @@
         <hr>
         <hr>
         <div class="article">
-            <br>The National Coffee Association (NCA) report on American coffee consumption in 2017 shows we are one
+            The National Coffee Association (NCA) report on American coffee consumption in 2017 shows we are one
             very
             caffeinated nation. This might not come as a shock—Starbucks and other coffee chains, along with local
             coffee shops, are staples in nearly every city in America—but what is surprising is the type of coffee we’re
@@ -70,13 +70,13 @@
             coffee must bear a cancer warning label? Read on to explore the complexities of coffee.
             <br>
             <br>
-            Coffee is an intricate mixture of more than a thousand chemicals. [1] The cup of coffee you order from a
+            Coffee is an intricate mixture of more than a thousand chemicals. The cup of coffee you order from a
             coffee shop is likely different from the coffee you brew at home. What defines a cup is the type of coffee
             bean used, how it is roasted, the amount of grind, and how it is brewed. Human response to coffee or
             caffeine can also vary substantially across individuals. Low to moderate doses of caffeine (50–300 mg) may
             cause increased alertness, energy, and ability to concentrate, while higher doses may have negative effects
-            such as anxiety, restlessness, insomnia, and increased heart rate. [2] Still, the cumulative research on
-            coffee points in the direction of a health benefit. [3,4] Does the benefit stem from the caffeine or plant
+            such as anxiety, restlessness, insomnia, and increased heart rate. Still, the cumulative research on
+            coffee points in the direction of a health benefit. Does the benefit stem from the caffeine or plant
             compounds in the coffee bean? Is there a certain amount of coffee needed a day to produce a health
             benefit?
             <br>
