--- a/sandbox/project/technology.html
+++ b/sandbox/project/technology.html
@@ -34,25 +34,58 @@
     </div>
 
     <section>
-        <h2>We tried the new Surface 8 pro</h2>
+        <h2>As Laptops Evolve, Education Transforms</h2>
         <hr>
         <hr>
         <div class="article">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque nobis provident, aliquid corporis
-            voluptatem sit magni repellendus iusto placeat deleniti tempore architecto expedita sapiente at
-            assumenda
-            blanditiis, modi, molestias fuga. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            <br> <br>
-            Vitae, velit. Ullam dolor totam, doloremque placeat quaerat reprehenderit quam facere odio perspiciatis
-            eum!
-            Beatae obcaecati
-            eveniet consequatur accusamus laudantium optio nobis provident itaque quam soluta, fuga unde maiores,
-            error
-            aliquam ipsum doloribus repellat officia eligendi atque blanditiis? Dignissimos ipsam unde nobis quia,
-            molestias
-            accusamus ullam consectetur. Numquam commodi similique ducimus error, asperiores enim architecto harum
-            modi
-            ipsum et perspiciatis mollitia, in a nulla ea tempora tempore laudantium.
+            At Lilla G. Frederick Pilot Middle School (LGF), students don’t just diagram a sentence. They film a
+            sentence.
+
+            English students at LGF were instructed to think up a sentence with a prepositional phrase—“Jimmy jumped on
+            a table”—and then create a short video of the sentence, which their classmates viewed on their laptops. “You
+            never saw so much laughter and giggles,” says principal Deb Socia. “And I guarantee none of those students
+            will ever forget what a preposition is.”
+
+            LGF has become the showcase for the growing belief that laptop computers, properly integrated into
+            classrooms, can have a profound effect on how students learn and act. The inner-city middle school is
+            located in a gang-ridden area in the Dorchester neighborhood of Boston. Thirty percent of the 670 students
+            have special needs, and nine in 10 are considered low income.
+
+            In 2007, a program was initiated to give each student a laptop and integrate the technology into instruction
+            in a meaningful way. At any given time, about one-third of the classrooms are engaged in some
+            technology-related activities. Students blog immediately when they come into class to settle in. They’ve
+            written and recorded their own protest songs on their laptops while studying the First Amendment.
+            <br>
+            <br>
+            <h3>Stronger Connections</h3>
+            <br>
+            While laptops may have started as a business tool, their role in education is only now being fully
+            explored—both in Third World countries with limited access to formal education and Westernized education
+            systems. They are being used to support overburdened school districts with limited teaching resources;
+            enhance critical thinking and academic success; and strengthen student and parental participation in the
+            learning process.
+
+            A recent study in the Journal of Technology, Learning, and Assessment found students in one-to-one computer
+            settings like LGF outperformed peers in traditional classrooms. In a single year, 20 percent of LGF students
+            increased their reading skills by two grade levels. The number of students referred to LGF’s principal or
+            other intervention specialists for disciplinary reasons has dropped from 500 to 100 in two years. Prior to a
+            flu outbreak, Socia says attendance levels had increased.
+
+            LGF is championing the notion that laptops have their greatest impact in the classroom by engaging students,
+            teachers and parents in creative, new ways. “People assume that if students are using individual laptops
+            they can’t be collaborating,” Socia says. “But if they are blogging, we use a LCD projector to show the
+            blogs on the board so the students can comment on each other’s work. The students can e-mail their writing
+            to a classmate for peer-to-peer editing in ten seconds.”
+
+            This dovetails with studies that indicate laptops shift instruction from lectures to individual and group
+            projects. At LGF, teachers use the technology to differentiate their instruction based on the special needs
+            or learning levels of a student. A crucial aspect for LGF is the inclusion of parents, many of whom have
+            never touched a computer before. Hundreds of families have joined the Technology Goes Home program, where
+            they are provided with training and a netbook to use at home.
+
+            “The parents take the computer home and the child becomes the teacher,” Socia says. “They sit together and
+            it improves the relationship. It’s a win-win situation.” Parents now hop online and check their children’s
+            homework assignments and grades.
             <br><br>
             Veniam quisquam, doloribus dolorum ullam delectus fugit quidem dolore accusantium iure optio assumenda
             similique, atque libero quibusdam mollitia
