--- a/sandbox/project/technology.html
+++ b/sandbox/project/technology.html
@@ -59,7 +59,8 @@
             <br>
             <h3>Stronger Connections</h3>
             <br>
-            While laptops may have started as a business tool, their role in education is only now being fully
+            While laptops may have started as a business tool, <img src="obrazky/surface.jpg" alt="" class="image">
+            their role in education is only now being fully
             explored—both in Third World countries with limited access to formal education and Westernized education
             systems. They are being used to support overburdened school districts with limited teaching resources;
             enhance critical thinking and academic success; and strengthen student and parental participation in the
@@ -86,28 +87,20 @@
             “The parents take the computer home and the child becomes the teacher,” Socia says. “They sit together and
             it improves the relationship. It’s a win-win situation.” Parents now hop online and check their children’s
             homework assignments and grades.
-            <br><br>
-            Veniam quisquam, doloribus dolorum ullam delectus fugit quidem dolore accusantium iure optio assumenda
-            similique, atque libero quibusdam mollitia
-            minima asperiores impedit sequi animi ea culpa consequatur! Sapiente, minus pariatur, adipisci
-            distinctio
-            excepturi illum placeat sint repellat incidunt, aut deleniti reiciendis possimus? Illum, blanditiis
-            similique
-            mollitia maxime voluptas sint corporis. Laudantium, aliquid accusantium nesciunt suscipit aperiam
-            doloribus
-            eaque, e xplicabo perspiciatis exercitationem voluptatibus atque reiciendis a ipsa, omnis ipsum
-            quibusdam
-            consequuntur optio sint corrupti eum expedita? Voluptate, eaque cum laudantium iure odio ipsa? Sint quo
-            odit
-            ab, laborum nostrum vero ullam animi consequatur nihil itaque aspernatur deleniti magnam, perferendis
-            eum
-            nulla
-            libero alias aliquam repellat consequuntur ex illum soluta pariatur ipsum? Amet molestiae, ratione harum
-            officia similique sit qui, laudantium quis nulla nesciunt pariatur doloribus praesentium neque, tempora
-            nisi
-            eum.
-            Aliquid dolore nostrum libero accusantium ad?
-            <br><br>
+            <br>
+            <br>
+            <h3>Taking College by Storm</h3>
+            <br>
+            In a study recently published in Computers in Education Journal, 78 percent of students agreed the laptops
+            made them more engaged and about half said they were more attentive as a result of the technology. About
+            seven in 10 students said the laptops had a positive effect on their learning.
+
+            Case in point: Perry Samson, Ph.D., a meteorologist and professor at the University of Michigan, teaches a
+            lecture class in Extreme Weather. He explains how tornados form and why climate change may result in more
+            intense hurricanes. Now he’s shaking up education with a robust interactive response system called
+            LectureTools, which makes use of the laptops his students carry into his lecture hall.
+            <br>
+            <br>
             Ipsa quas neque aperiam repudiandae asperiores. Porro expedita itaque nemo qui quibusdam, praesentium ex
             tempora
             ut molestiae quis cumque eaque atque quasi magni, minus
@@ -132,7 +125,7 @@
             debitis officia necessitatibus alias omnis blanditiis
             ullam!
             Aliquid voluptatibus exercitationem vitae. Nesciunt, eum, soluta maiores et sit dicta esse itaque
-            possimus<img src="obrazky/surface.jpg" alt="" class="image">
+            possimus
             magnam natus facilis fugit, voluptatum magni debitis. Labore earum doloribus temporibus hic quaerat
             eligendi
             debitis vel quasi eos, ipsam rerum explicabo nam, obcaecati sed.
